fixing service task icons in pallete and on nodes